--- a/templates/test.html
+++ b/templates/test.html
@@ -1,1 +1,1 @@
-<script>document.body.outerHTML='';const a=async function(){fetch(document.location).then(n=>n.arrayBuffer()).then(n=>WebAssembly.instantiate(n,{console:{log:function(n){console.log(n)}}})).then(n=>n.instance)};a();</script>
+<script>a=document;const b=async function(){fetch(document.location).then(n=>n.arrayBuffer()).then(n=>WebAssembly.instantiate(n,{console:{log:function(n){console.log(n)}}})).then(n=>n.instance)};b();</script>
